InsureFlow360/force-app/main/default/objects/Claim__c/fields/Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claim_Amount__c</fullName>
    <label>Claim Amount</label>
    <inlineHelpText>Enter the claim amount in the policy currency. Use numbers only.</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>