InsureFlow360/force-app/main/default/objects/Claim__c/fields/Claim_Processed__c.field-meta.xml
<CustomField>
    <fullName>Claim_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim Processed</label>
    <type>Checkbox</type>
</CustomField>