InsureFlow360/force-app/main/default/objects/Claim__c/fields/Fraud_Status__c.field-meta.xml
<CustomField>
  <fullName>Fraud_Status__c</fullName>
  <label>Fraud Status</label>
  <inlineHelpText>Select the current Fraud Status.</inlineHelpText>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>Pending</fullName>
      </value>
      <value>
        <fullName>Low Risk</fullName>
      </value>
      <value>
        <fullName>Medium Risk</fullName>
      </value>
      <value>
        <fullName>High Risk</fullName>
      </value>
      <value>
        <fullName>Blocked</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>