InsureFlow360/force-app/main/default/objects/Claim__c/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <label>Insurance Policy</label>
    <inlineHelpText>Select the related insurance policy that covers this claim.</inlineHelpText>
    <referenceTo>Insurance_Policy__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>