InsureFlow360/force-app/main/default/objects/Claim__c/fields/Investigation_Required__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investigation Required</label>
    <inlineHelpText>Check this box if Investigation Required.</inlineHelpText>
    <type>Checkbox</type>
</CustomField>