InsureFlow360/force-app/main/default/objects/Claim__c/validationRules/Claim_Amount_limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Claim_Amount_limit</fullName>
    <active>true</active>
    <errorConditionFormula>Claim_Amount__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Claim_Amount__c</errorDisplayField>
    <errorMessage>Claim Amount cannot be negative.</errorMessage>
</ValidationRule>